--- a/sessiondialog.ui
+++ b/sessiondialog.ui
@@ -277,8 +277,8 @@
       <rect>
        <x>10</x>
        <y>40</y>
-       <width>371</width>
-       <height>391</height>
+       <width>381</width>
+       <height>471</height>
       </rect>
      </property>
      <property name="editTriggers">
@@ -297,13 +297,18 @@
        <string>Current Weight</string>
       </property>
      </column>
+     <column>
+      <property name="text">
+       <string>Date/Time</string>
+      </property>
+     </column>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
        <x>200</x>
        <y>10</y>
-       <width>181</width>
+       <width>191</width>
        <height>21</height>
       </rect>
      </property>
