added update button; also, now the exercise table is cleared after committing a new session.

--- a/sessiondialog.ui
+++ b/sessiondialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>553</height>
+    <width>410</width>
+    <height>559</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -327,18 +327,31 @@
       </property>
      </column>
     </widget>
-    <widget class="QLabel" name="label_5">
+    <widget class="QWidget" name="horizontalLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>10</y>
-       <width>191</width>
-       <height>21</height>
+       <x>190</x>
+       <y>0</y>
+       <width>201</width>
+       <height>41</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Split</string>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Split</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="updateButton">
+        <property name="text">
+         <string>update</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_3">
